--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "electron plus webpack"
   ],
   "author": "GitHub",
-  "license": "CC0-1.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wmira/electron-livereload-starter/issues"
   },
